test/files/neg/t7324.check
t7324.scala:2: error: Platform restriction: a parameter list's length cannot exceed 254.
class Bar(
         ^
one error found
